<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/standard_indent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp"
            android:layout_weight="2"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="#00BCD4"
                android:padding="@dimen/min_indent"
                tools:ignore="NestedWeights">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="@dimen/fifty_dp"
                    android:layout_gravity="top"
                    android:contentDescription="@string/first_image_description"
                    android:src="@drawable/lol"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/twenty_dp"
                    android:layout_gravity="bottom"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/second_image_description"
                    android:src="@drawable/long_picture" />
            </FrameLayout>

            <ListView
                android:id="@+id/lvFighters"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/standard_indent"
                android:layout_weight="6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp"
            android:layout_marginTop="@dimen/min_indent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_indent"
                android:text="@string/label"
                android:textAlignment="center"
                android:textSize="@dimen/standard_text_size" />

            <EditText
                android:id="@+id/etLabelEditor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_indent"
                android:autofillHints="Write something"
                android:inputType="textPersonName"
                android:minHeight="@dimen/fifty_dp"
                android:text="@string/edittext"
                android:textSize="@dimen/standard_text_size"
                tools:ignore="LabelFor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_indent"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/colorSwitch"
                    android:layout_width="@dimen/fifty_dp"
                    android:layout_height="@dimen/fifty_dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/min_indent"
                    android:text="@string/change_label_color"
                    android:textSize="@dimen/standard_text_size" />
            </LinearLayout>

            <Button
                android:id="@+id/btnHideList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_indent"
                android:text="@string/hide_list"
                android:textSize="@dimen/standard_text_size" />

            <Button
                android:id="@+id/btnToast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_indent"
                android:text="@string/toast"
                android:textSize="@dimen/standard_text_size" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBtn"
        android:layout_width="@dimen/fifty_dp"
        android:layout_height="@dimen/fifty_dp"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="@dimen/standard_indent"
        android:layout_marginBottom="@dimen/standard_indent"
        android:backgroundTint="@color/gold"
        android:contentDescription="@string/fab"
        tools:ignore="ImageContrastCheck" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>