<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/zero_dp"
            android:layout_marginStart="@dimen/min_indent"
            android:layout_marginTop="@dimen/min_indent"
            android:text="@string/plus"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/btnPoints"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btnPoints"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/zero_dp"
            android:layout_marginTop="@dimen/min_indent"
            android:layout_marginEnd="@dimen/min_indent"
            android:text="@string/minus"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/btnPoints"
            app:layout_constraintTop_toBottomOf="@+id/btnPoints"
            tools:ignore="TextContrastCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btnPoints"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/zero_dp"
            android:layout_marginStart="@dimen/fifty_dp"
            android:layout_marginTop="@dimen/fifty_dp"
            android:layout_marginEnd="@dimen/fifty_dp"
            android:clickable="false"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textSize="@dimen/extra_large_text_size"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
